@@ -1,7 +1,8 @@
 Next Release
+* Fix web folder export to convert filenames to safe ASCII characters
 * Fix iPod Notes export to write UTF-8 index (non-ASCII node names)
 * Change license footer text so translators can ignore trailing space
-* Updated DE translation
+* Updated DE,FR,IT translations
 
 Version 1.00 (r3219)
 * Fix styles to use relative line height rather than absolute
